--- a/FormuSalud/Properties/Resources.resx
+++ b/FormuSalud/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="logo-soloblanco-Photoroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo-soloblanco-Photoroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="descargar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\descargar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
